--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ version: "3.8"
 
 services:
   web:
+    build: .
     image: hannibal1022/php-sample-app
     container_name: php_app
     ports:
       - "8080:80"
+    volumes:
+      - .:/var/www/html
     depends_on:
       - db
 
